--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Player</string>
     <string name="next">Next</string>
+    <string name="change">changed song</string>
+    <string name="prev">Prev</string>
 </resources>
